Added security config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@
 #     You should have received a copy of the GNU General Public License
 #     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
+
 spring.application.name=brewery-monolith
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
@@ -21,6 +22,9 @@ server.port=8080
 spring.messages.basename=messages/messages
 
 logging.level.guru=debug
+
+spring.security.user.name=artem
+spring.security.user.password=MicrosoftShit1997
 
 # Spring Data hangs when not set under Spring Boot 2.3.0
 spring.data.jpa.repositories.bootstrap-mode=default
